--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - main
   pull_request:
     paths:
-      - 'src/**'
+      - 'tp1/src/**'
 
 jobs:
   checkout:
@@ -29,6 +29,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build com Maven
+        working-directory: tp1/tp1
         run: mvn clean install
 
   test:
@@ -45,4 +46,5 @@ jobs:
           distribution: 'temurin'
 
       - name: Executar testes
+        working-directory: tp1/tp1
         run: mvn test
