--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -1,21 +1,12 @@
-name: CI Pipeline
+name: Lint and Test
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    paths:
-      - 'tp1/src/**'
-  workflow_dispatch:
+  workflow_call:
 
 jobs:
-  lint-and-test:
-    uses: ./.github/workflows/lint-and-test.yml
-
-  build:
+  lint:
+    name: Verificar Lint
     runs-on: ubuntu-latest
-    needs: lint-and-test
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
@@ -26,13 +17,14 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Build com Maven
+      - name: Executar Linter
         working-directory: tp1
-        run: mvn clean install
+        run: mvn checkstyle:check
 
-  package:
+  test:
+    name: Executar testes automatizados
     runs-on: ubuntu-latest
-    needs: build
+    needs: lint
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
@@ -43,13 +35,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Gerar .jar com Maven
+      - name: Executar testes
         working-directory: tp1
-        run: mvn package
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - name: Mensagem de Deploy
-        run: echo "Deploy realizado com sucesso"
+        run: mvn test
