--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,24 @@ on:
     paths:
       - 'tp1/src/**'
   workflow_dispatch:
+    inputs:
+      run_tests:
+        description: 'Deve executar Testes?'
+        required: false
+        type: boolean
+        default: true
+      run_lint:
+        description: 'Deve executar Lint?'
+        required: false
+        type: boolean
+        default: true
 
 jobs:
   lint-and-test:
     uses: ./.github/workflows/lint-and-test.yml
+    with:
+      run_tests: ${{ inputs.run_tests }}
+      run_lint: ${{ inputs.run_lint }}
 
   build:
     runs-on: ubuntu-latest
@@ -49,7 +63,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: build
     steps:
       - name: Mensagem de Deploy
         run: echo "Deploy realizado com sucesso"
