--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -2,10 +2,20 @@ name: Lint and Test
 
 on:
   workflow_call:
+    inputs:
+      run_tests:
+        required: false
+        type: boolean
+        default: true
+      run_lint:
+        required: false
+        type: boolean
+        default: true
 
 jobs:
   lint:
-    name: Verificar lint
+    name: Verificar Lint
+    if: ${{ inputs.run_lint == true }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout do código
@@ -23,8 +33,8 @@ jobs:
 
   test:
     name: Executar testes automatizados
+    if: ${{ inputs.run_tests == true }}
     runs-on: ubuntu-latest
-    needs: lint
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
