--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,3 +67,21 @@ jobs:
     steps:
       - name: Mensagem de Deploy
         run: echo "Deploy realizado com sucesso"
+
+      - name: Exibir variáveis de configuração
+        run: |
+          echo "Modo da aplicação: ${{ vars.APP_MODE }}"
+          echo "E-mail de suporte: ${{ vars.SUPPORT_EMAIL }}"
+
+      - name: Comportamento baseado no modo da aplicação
+        run: |
+          if [ "${{ vars.APP_MODE }}" = "prod" ]; then
+            echo "Executando passos de prod..."
+          else
+            echo "Executando passos de dev..."
+          fi
+
+      - name: autenticação de deploy
+        run: |
+          echo "Iniciando autenticação..."
+          echo "Autenticação ${{ secrets.PROD_TOKEN }} concluída com sucesso"
